Minor edits to MS

--- a/docs/Bioinformatics-MS/main.tex
+++ b/docs/Bioinformatics-MS/main.tex
@@ -3,16 +3,19 @@
 
 \usepackage{epstopdf}
 \access{Advance Access Publication Date: Day Month Year}
-\appnotes{Manuscript Category}
+\appnotes{Application Note}
 
 \begin{document}
 \firstpage{1}
 
 \subtitle{Subject Section}
 
-\title[short Title]{This is a title}
-\author[Sample \textit{et~al}.]{Corresponding Author\,$^{\text{\sfb 1,}*}$, Co-Author\,$^{\text{\sfb 2}}$ and Co-Author\,$^{\text{\sfb 2,}*}$}
-\address{$^{\text{\sf 1}}$Department, Institution, City, Post Code, Country and \\
+\title[Debarcer]{Debarcer: Tools for Debarcoding and Error Correction using SimSeqSeq Molecular Barcoding}
+\author[Krzyzanowski \textit{et~al}.]{Paul M. Krzyzanowski\,$^{\text{\sfb 1,}*}$,
+Anders Stahlberg\,$^{\text{\sfb 2}}$
+Tony Godfrey\,$^{\text{\sfb 2}}$
+and Lincoln Stein\,$^{\text{\sfb 2,}*}$}
+\address{$^{\text{\sf 1}}$Informatics and Biocomputing, Ontario Institute for Cancer Research, Toronto, Ontario, Canada and \\
 $^{\text{\sf 2}}$Department, Institution, City, Post Code,
 Country.}
 
@@ -31,7 +34,7 @@ Text Text Text Text Text.\\
 Text Text Text Text Text Text Text Text Text Text Text Text Text  Text Text Text Text Text Text\\
 \textbf{Availability:} Text  Text Text Text Text Text Text Text Text Text  Text Text Text Text
 Text Text Text Text Text Text Text Text Text Text Text Text Text Text  Text\\
-\textbf{Contact:} \href{name@bio.com}{name@bio.com}\\
+\textbf{Contact:} \href{Paul Krzyzanowski}{paul.krzyzanowski@oicr.on.ca}\\
 \textbf{Supplementary information:} Supplementary data are available at \textit{Bioinformatics}
 online.}
 
@@ -44,6 +47,7 @@ Text Text  Text Text Text Text Text Text. Figure~\ref{fig:01}
 shows that the above method  Text Text Text Text  Text Text Text
 text Text Text  Text Text.  \citep{Bag01} wants to know about
 {\ldots}{\ldots} text follows.
+
 \begin{equation}
 \sum \text{\it x}+ \text{\it y} =\text{\it Z}\label{eq:01}\vspace*{-10pt}
 \end{equation}
